scrollbar 없애기, tables 글자 보이게

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -36,6 +36,12 @@ body {
   margin: 0;
   padding: 0;
   text-transform: capitalize;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+body::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera*/
 }
 .menu {
   margin: 15px;
